--- a/config.toml
+++ b/config.toml
@@ -104,27 +104,27 @@ disqusShortname = ""
       url = "blogs/blog5"
 
     [[params.tiles.showcase]]
-      title = "Magna"
-      subtitle = "Lorem Etiam Nullam"
-      image = "pic03.jpg"
-      url = "blogs/magna"
+      title = "Movies"
+      subtitle = "Study of the drivers behind great movies"
+      image = "movies.jpg"
+      url = "blogs/blog7"
 
     [[params.tiles.showcase]]
-      title = "Ipsum"
-      subtitle = "Nisl Sed Aliquam"
-      image = "pic04.jpg"
-      url = "blogs/ipsum"
+      title = "Movie Directors"
+      subtitle = "Study of movie directors"
+      image = "spielberg.jpg"
+      url = "blogs/blog8"
 
     [[params.tiles.showcase]]
-      title = "Consequat"
-      subtitle = "Ipsum Dolor Sit Amet"
-      image = "pic05.jpg"
-      url = "blogs/ipsum"
+      #title = "Consequat"
+      #subtitle = "Ipsum Dolor Sit Amet"
+      #image = "pic05.jpg"
+      #url = "blogs/ipsum"
 
     [[params.tiles.showcase]]
-      title = "Etiam"
-      subtitle = "Feugiat Amet Tempus"
-      image = "pic06.jpg"
+      #title = "Etiam"
+      #subtitle = "Feugiat Amet Tempus"
+      #image = "pic06.jpg"
       url = "blogs/ipsum"
     # You can make more showcases by copy and pasting the code above
 
@@ -138,21 +138,17 @@ disqusShortname = ""
   # Section Type Two
   [params.two]
     enable = true
-    title = "Massa libero"
-    subtitle = """Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. 
-    Mauris aliquet magna magna sed nunc rhoncus pharetra. 
-    Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. 
-    Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero.
-    Mauris aliquet magna magna sed nunc rhoncus amet pharetra et feugiat tempus."""
-    buttonText = "Get Started"
+    title = "My Work"
+    subtitle = """Consider this to be an overview of some of the projects I have worked on during my Data Analytics class. For further information, feel free to contact me through some of the sources mentioned here below"""
+    buttonText = "Let's Go"
     url = "blogs"
 
 
   # Contact section
   [params.contact]
-    enable = true
-    buttonSend = "Send message"
-    buttonClear = "Clear"
+  # enable = true
+  #buttonSend = "Send message"
+  #buttonClear = "Clear"
 
     # Since this template is static, the contact form uses www.formspree.io as a
     # proxy. The form makes a POST request to their servers to send the actual
@@ -204,16 +200,16 @@ disqusShortname = ""
       icon = "fa-instagram"
       url= "https://www.instagram.com/emmanuelvanlembergen/?hl=nl"
       label = "Instagram"
-    
-    [[params.footer.social]]
-      #icon = "fa-github"
-      #url= "https://www.github.com"
-      #label = "GitHub"
 
     [[params.footer.social]]
       icon = "fa-linkedin"
       url= "https://www.linkedin.com/in/emmanuel-van-lembergen/"
       label = "LinkedIn"
+        
+    [[params.footer.social]]
+      #icon = "fa-github"
+      #url= "https://www.github.com"
+      #label = "GitHub"
 
     [[params.footer.quicklinks]]
       #text = "Design: "
