--- a/config.toml
+++ b/config.toml
@@ -94,7 +94,7 @@ disqusShortname = ""
     [[params.tiles.showcase]]
       title = "Alcohol consumption"
       subtitle = "Top beer and wine consuming countries"
-      image = "beerandwine"
+      image = "wineandbeer"
       url = "blogs/blog6"
 
     [[params.tiles.showcase]]
@@ -115,19 +115,7 @@ disqusShortname = ""
       image = "spielberg.jpg"
       url = "blogs/blog8"
 
-    [[params.tiles.showcase]]
-      #title = "Consequat"
-      #subtitle = "Ipsum Dolor Sit Amet"
-      #image = "pic05.jpg"
-      #url = "blogs/ipsum"
-
-    [[params.tiles.showcase]]
-      #title = "Etiam"
-      #subtitle = "Feugiat Amet Tempus"
-      #image = "pic06.jpg"
-      url = "blogs/ipsum"
-    # You can make more showcases by copy and pasting the code above
-
+   
   [params.blog]
     # All blogs defined in their own files. You can find example blogs
     # at 'exampleSite/content/blogs'. Copy the 'blogs' folder into the 'content' directory
