--- a/config.toml
+++ b/config.toml
@@ -83,6 +83,7 @@ disqusShortname = ""
     # the 'static/img' folder.
     title = "Emmanuel & Data Analytics"
     subtitle = "A deep dive into my work"
+    image = "me"
     buttonText = "Let's go"
 
 
@@ -94,7 +95,7 @@ disqusShortname = ""
     [[params.tiles.showcase]]
       title = "Alcohol consumption"
       subtitle = "Top beer and wine consuming countries"
-      image = "wineandbeer"
+      image = "beerandwine"
       url = "blogs/blog6"
 
     [[params.tiles.showcase]]
